--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "structurejs": "*",
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "lovefield": "~2.1.6"
   }
 }
